--- a/js/sass/components/_companies.scss
+++ b/js/sass/components/_companies.scss
@@ -13,9 +13,10 @@
     color: #000;
 }
 .companies {
-    list-style: none;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-bottom: -30px;
 }
 .companies__icons{
     transition: color  250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -30,4 +31,32 @@
     &:focus {
         fill: $accent-color;
         border: 1px solid $accent-color;    }
+}
+.companies__item{
+    flex-basis: calc((100% - 60px) / 2);
+    margin-bottom: 30px;
+    margin-left: 30px;
+    width: 100%;
+    height: 92px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    transition-property: fill, border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+}
+@media screen and (min-width: 768px){
+.clients__item {
+    flex-basis: calc((100% - 90px) / 3);
+    margin-left: 30px;
+}
+}
+@media screen and (min-width: 1200px){
+.clients__item {
+    flex-basis: calc((100% - 180px) / 6);
+    margin-left: 30px;
+}
 }
