--- a/js/sass/components/_header.scss
+++ b/js/sass/components/_header.scss
@@ -19,23 +19,55 @@ body {
   font-style: normal;
   letter-spacing: 0.03em;
   }
+img{
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.header__container {
+    display: flex;
+    align-items: center;
+}
 
 
-.page-header {
-    border-bottom: 1px solid $header-border-color;
-  }
+.header__container {
+    display: flex;
+    align-items: center;
+}
+
+
+
 .container {
-    width: 1200px;
-  margin-right: auto;
+  width: 100%;
+  min-width: 320px;
+  padding: 0 15px;
   margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  margin-right: auto;
   &--flex{
     display: flex;
     align-items: center;
   }
-  
-} 
+}
+@media screen and (min-width: 480px){
+.container {
+      width: 480px;
+  }
+  }
+@media screen and (min-width: 768px){
+.container {
+   width: 768px;
+}
+}
+@media screen and (min-width: 1200px){
+.container {
+    width: 1200px;
+}
+}
+.page-header {
+    border-bottom: 1px solid $header-border-color;
+
+}
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -48,6 +80,7 @@ body {
     align-items: center;
   
 }
+
 .site-navigation-list {
     list-style: none;
     display: flex;
@@ -66,6 +99,12 @@ body {
     &:focus {
         color: $accent-color;
       }
+  }
+@media screen and (min-width: 768px) and (max-width: 1199px){
+  .site-navigation-list {
+      display: flex;
+      margin-left: 88px;
+    }
   }
 .site-navigation-list__item{
     &:not(:last-child) {
@@ -107,30 +146,65 @@ body {
     display: none;
   }
 }
+
 .contact-navigation-list {
     list-style: none;
     display: flex;
+    flex-direction: column;
+    width: auto;
     align-items: center;
     margin-left: auto;
   }
-.contact-navigation-list__item{
-    &:not(:last-child) {
-    margin-right: 50px;  }
-}
-.contact-navigation-list__item-link{
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding-top: 32px;
-    padding-bottom: 32px;
-    text-decoration: none;
+@media screen and (min-width: 1200px){
+  .contact-navigation-list {
     display: flex;
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: $primary-text-color;
-    &:hover,
-    &:focus {
+    flex-direction: row;
+    }
+    }
+
+
+@media screen and (min-width: 768px) and (max-width: 1199px){
+  .contact-navigation-list__item {
+    padding-bottom: 5px;
+    padding-top: 5px;
+  }
+  }
+.contact-navigation-list__item-link{
+  align-items: center;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  color: $primary-text-color;
+  &:hover,
+  &:focus {
         color: $accent-color;
+  
       }
+}
+@media screen and (min-width: 1200px){
+  .contact-navigation-list__item {
+    display: flex;
+    flex-direction: row;
+    &:not(:first-child){
+      margin-left: 50px;
+    }
+    }
+    }
+  @media screen and (max-width: 1200px){
+  .contact-navigation-list__item{
+    flex-direction: row;
+    &:not(:first-child){
+      margin-right: 10px;
+    }
+}
+    
 }
 .icon-envelope{
     fill:currentColor;
