--- a/js/sass/components/_other_section.scss
+++ b/js/sass/components/_other_section.scss
@@ -35,7 +35,17 @@
 .specifics-list{
     list-style: none;
 }
+@media screen and (min-width: 768px){
+.specifics-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-bottom: -30px;
+}
+}
 .specifics-list__item {
+  width: 100%;
+  margin-bottom: 30px;
     width: calc((100%-90px) / 3);
     &::before{content: '';
         display: block;
@@ -51,7 +61,13 @@
     .works-list__item:not(:last-child) {
       margin-right: 30px;
     }
-}       
+} 
+@media screen and (min-width: 768px){
+.specifics-list .specifics-list__item {
+    flex-basis: calc((100% - 60px) / 2);
+    margin-left: 30px;
+}   
+}   
 .specifics-list__item-title {
    color: $title-text-color;
     }
