--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -141,7 +141,7 @@
 }
 
 .modal-form__label-checkbox {
-  @include font(14px, 1.714, 0.03em, 400);
+  @include font(12px, 1.714, 400);
   display: block;
   font-style: normal;
   margin-bottom: 30px;
